update in confrence, peer talk, cohorts, setupday avaiability

--- a/css/calendar_admin_details_calendar_content.css
+++ b/css/calendar_admin_details_calendar_content.css
@@ -329,6 +329,12 @@ body {
   background: rgba(181, 53, 255, 0.05) !important;
   border-bottom-color: rgba(181, 53, 255, 0.7) !important;
 }
+.e-orange {
+  --event-border-color: #ff8a06;
+  border-color: rgba(255, 138, 6, 0.7) !important;
+  background: rgba(255, 138, 6, 0.05) !important;
+  border-bottom-color: rgba(255, 138, 6, 0.7) !important;
+}
 .e-gold {
   --event-border-color: #d4a017;
   border-color: var(--event-border-color);
