--- a/css/calendar_admin_details.css
+++ b/css/calendar_admin_details.css
@@ -36,7 +36,7 @@ body {
 }
 .calendar_admin_main_wrapper {
   display: flex;
-  max-height: 80vh;
+  max-height: 84vh;
   background: var(--calendar-admin-bg);
 }
 .calendar_admin_sidebar {
@@ -565,8 +565,8 @@ body {
 }
 
 /* Dropdowns */
-.dropdown-menu,
-.profile-menu {
+.calendar_admin_main_wrapper .dropdown-menu,
+.calendar_admin_main_wrapper .profile-menu {
   position: fixed !important;
   background: #fff;
   box-shadow: 0 4px 16px 0 rgba(60, 60, 60, 0.14);
@@ -696,7 +696,7 @@ body {
   overflow: auto; /* or scroll if needed */
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* Internet Explorer and Edge (legacy) */
-  max-height: 69vh !important;
+  max-height: 73vh !important;
   height: auto !important;
 }
 
