UI changes and development changes

--- a/css/my_lesson_tutor_profile_details_send_message_chat_all.css
+++ b/css/my_lesson_tutor_profile_details_send_message_chat_all.css
@@ -754,6 +754,9 @@
   line-height: 1.1;
   letter-spacing: 1.1px;
 }
+.details_profile_name:hover {
+  color:red;
+}
 
 .details_profile_stars {
   text-align: center;
