--- a/css/calendar_admin_details_create_cohort.css
+++ b/css/calendar_admin_details_create_cohort.css
@@ -233,7 +233,7 @@
 #calendar_admin_details_create_cohort_modal {
   background: #fff;
   width: 95%;
-  max-width: 770px;
+  max-width: 650px;
   /* max-height: 93vh; */
   max-height: 93vh;
   margin: 5vh auto;
@@ -1684,8 +1684,9 @@ input[type="date"] {
 }
 
 .calendar_admin_details_cohort_tab_timezone_list {
-   overflow: auto; height: 185px;
-  max-height:185px;
+  overflow: auto;
+  height: 185px;
+  max-height: 185px;
   display: none;
   position: absolute;
   left: 0;
@@ -1765,8 +1766,9 @@ input[type="date"] {
 }
 
 .calendar_admin_details_cohort_tab_timezone_list_right {
-    overflow: auto; height: 185px;
-  max-height:185px;
+  overflow: auto;
+  height: 185px;
+  max-height: 185px;
   display: none;
   position: absolute;
   left: 0;
